GNOME Bugzilla – Bug 669317
Plug memory leak in lazy typelibs hash table
Last modified: 2015-02-07 17:02:11 UTC
There is a small memory leak in the lazy typelibs hash table which should be plugged. See attached patch.
Created attachment 206687 [details] [review] Plug memory leak in lazy typelibs hash table
Review of attachment 206687 [details] [review]: Looks good, thanks!
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]