Plug memory leak in lazy typelibs hash table

https://bugzilla.gnome.org/show_bug.cgi?id=669317